Fix sidebar spacing

--- a/style.css
+++ b/style.css
@@ -126,13 +126,13 @@ body{
     width: 20vw;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    justify-content: space-around;
 }
 
 .middle-container .side-container .content{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 25px;
     background: white;
     border: 4px solid #6320EE;
     /* padding: 10px; */
@@ -147,9 +147,10 @@ body{
     border: 4px solid #6320EE;
     border-radius: 50px;
     width: 100%;
-    padding: 10px 0;
+    padding: 15px 0;
     display: flex;
     align-items: center;
+    gap: 6px;
     justify-content: center;
     flex-direction: column;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.253);
@@ -179,7 +180,7 @@ body{
 .middle-container .side-container .content .middle .left, .right{
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 40px;
     padding: 0 10px;
 }
 
